# fastapi_alembic

./: ToDo  alembic.ini  database.py  main.py  models.py  pyproject.toml  settings.py
migrations/versions/: 6e22f71abd4e_create_user_database.py
routers/: book.py
